--- a/AgrIA_UI/src/app/components/chat/chat-assistant/chat-assistant.component.html
+++ b/AgrIA_UI/src/app/components/chat/chat-assistant/chat-assistant.component.html
@@ -3,12 +3,12 @@
     <div class="message {{ msg.role }}">
       <div class="bubble">
         @if (msg.loading) {
-          <img src="img/message-icon.png" class="typing-icon" alt="Assistant is thinking...">
+          <img src="img/message-icon.png" class="typing-icon" alt="Assistant is thinking..." />
         } @else {
           <markdown [data]="msg.revealProgress ?? msg.content"></markdown>
         }
       </div>
     </div>
   }
-  <div #scrollAnchor></div> 
+  <div #scrollAnchor></div>
 </div>
