Style: Minor styling fixes

--- a/AgrIA_UI/src/app/components/home-page/home-page.component.html
+++ b/AgrIA_UI/src/app/components/home-page/home-page.component.html
@@ -82,7 +82,7 @@
         <div class="mockup-container parcel-finder-mockup">
           <div class="content">
             <div class="form-title">
-              <h2>{{ 'parcelFinder.cadastralReference' | translate }}</h2>
+              <h2>{{ 'parcelFinder.cadastralData' | translate }}</h2>
             </div>
             <div class="form-description">
               <p>
@@ -218,9 +218,9 @@
     </section>
 
     <section id="notice" class="content-section">
-      <div class="quickstart-list content-card">
+      <div class="quickstart-list content-card" style="background: none; box-shadow: none;">
         <details>
-          <summary class="section-title" style="font-size: xx-large; color: var(--color-brand-secondary); cursor: pointer">
+          <summary class="section-title" style="color: var(--color-brand-secondary); cursor: pointer; font-style: italic;">
             {{ 'home.transparencyNotice.sectionTitle' | translate }}
           </summary>
 
