--- a/AgrIA_UI/src/app/components/navbar/navbar.component.html
+++ b/AgrIA_UI/src/app/components/navbar/navbar.component.html
@@ -43,9 +43,15 @@
       </li>
       <li class="nav-item">
         @if (this.currentLanguage == 'en') {
-          <button class="btn es" (click)="switchLanguage('es')"></button>
+          <button 
+          class="btn es"
+          title="{{ ('nav.lang.switch' | translate) }}"
+          (click)="switchLanguage('es')"></button>
         } @else {
-          <button class="btn en" (click)="switchLanguage('en')"></button>
+          <button 
+          class="btn en"
+          title="{{ ('nav.lang.switch' | translate) }}"
+          (click)="switchLanguage('en')"></button>
         }
       </li>
     </ul>
